--- a/index.html
+++ b/index.html
@@ -6,25 +6,36 @@
   <title>LAN Scoreboard (Sender)</title>
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Google Cast Web Sender SDK (Framework API) -->
+  <!-- Google Cast Web Sender SDK (Cast Framework) -->
   <script src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
 </head>
+
 <body>
   <div class="app">
-    <header>
-      <h1>LAN Scoreboard</h1>
-      <p>Konfigurer her, vis på TV via Chromecast.</p>
-      <!-- Cast button (må styles litt i CSS) -->
-      <google-cast-launcher id="castButton"></google-cast-launcher>
+    <header class="topbar">
+      <div class="topbar-left">
+        <h1>LAN Scoreboard</h1>
+        <p>Konfigurer her på PC – vis på TV via Chromecast.</p>
+      </div>
+
+      <div class="topbar-right">
+        <!-- Chromecast ikon/knapp -->
+        <google-cast-launcher id="castButton"></google-cast-launcher>
+      </div>
     </header>
 
-    <section class="controls">
-      <input id="nameInput" placeholder="Brukernavn..." maxlength="16" />
-      <button id="addBtn">Legg til</button>
-      <button id="resetBtn" class="danger">Reset</button>
+    <section class="card">
+      <h2>Spillere</h2>
+      <div class="controls">
+        <input id="nameInput" placeholder="Brukernavn..." maxlength="16" />
+        <button id="addBtn">Legg til</button>
+        <button id="resetBtn" class="danger">Reset</button>
+      </div>
+
+      <div class="hint" id="castHint">🔄 Ikke tilkoblet Chromecast</div>
     </section>
 
-    <section>
+    <section class="card">
       <h2>Ranking</h2>
       <div id="list" class="list"></div>
     </section>
