--- a/receiver.html
+++ b/receiver.html
@@ -9,16 +9,25 @@
   <!-- CAF Receiver SDK -->
   <script src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
 </head>
-<body>
+
+<body class="receiver">
   <div class="app">
-    <header>
-      <h1>LAN Scoreboard</h1>
-      <p id="status">Venter på sender...</p>
+    <header class="topbar">
+      <div class="topbar-left">
+        <h1>LAN Scoreboard</h1>
+        <p id="status">Venter på sender…</p>
+      </div>
+      <div class="topbar-right">
+        <div class="pill" id="pill">Ikke koblet</div>
+      </div>
     </header>
 
-    <section class="podium" id="podium"></section>
+    <section class="card">
+      <h2>Topp 3</h2>
+      <div class="podium" id="podium"></div>
+    </section>
 
-    <section>
+    <section class="card">
       <h2>Ranking</h2>
       <div id="list" class="list"></div>
     </section>
