--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+
+  <!-- Chromecast ikon/knapp (flyttet hit øverst i body) -->
+  <google-cast-launcher id="castButton"></google-cast-launcher>
+
   <div class="app">
     <header class="topbar">
       <div class="topbar-left">
@@ -21,7 +25,6 @@
 
       <div class="topbar-right">
         <!-- Chromecast ikon/knapp -->
-        <google-cast-launcher id="castButton"></google-cast-launcher>
       </div>
     </header>
 
