--- a/receiver.html
+++ b/receiver.html
@@ -10,15 +10,12 @@
   <script src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
 </head>
 
-<body class="receiver">
+<body>
   <div class="app">
     <header class="topbar">
       <div class="topbar-left">
         <h1>LAN Scoreboard</h1>
         <p id="status">Venter på sender…</p>
-      </div>
-      <div class="topbar-right">
-        <div class="pill" id="pill">Ikke koblet</div>
       </div>
     </header>
 
