--- a/receiver.html
+++ b/receiver.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
+  
+  <!-- Stort midlertidig statusfelt -->
+  <div style="font-size:40px;font-weight:900;color:white;padding:40px;">
+  <div>LAN Receiver</div>
+  <div id="status">Starter…</div>
+  </div>
+
   <div class="app">
     <h1>LAN Scoreboard</h1>
     <p id="status">Venter på sender…</p>
