--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
     <section class="card">
       <h2>Spillere</h2>
       <div class="controls">
-        <input id="nameInput" placeholder="Brukernavn..." maxlength="16" />
-        <button id="addBtn">Legg til</button>
-        <button id="resetBtn" class="danger">Reset</button>
-      </div>
+  <input id="nameInput" placeholder="Brukernavn..." maxlength="16" />
+  <button id="addBtn" class="btn btn-primary">Legg til</button>
+  <button id="finishBtn" class="btn btn-glow">FERDIG</button>
+  <button id="resetBtn" class="btn btn-danger">Reset</button>
+</div>
+
 
       <div class="hint" id="castHint">Klar for oppkobling</div>
     </section>
