--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>LAN Scoreboard (Sender)</title>
 
-  <!-- Cast SDK (samme som i countdown-appen din) -->
   <script src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
 
   <link rel="stylesheet" href="style.css" />
@@ -27,12 +26,12 @@
     <section class="card">
       <h2>Spillere</h2>
       <div class="controls">
-  <input id="nameInput" placeholder="Brukernavn..." maxlength="16" />
-  <button id="addBtn" class="btn btn-primary">Legg til</button>
-  <button id="finishBtn" class="btn btn-glow">FERDIG</button>
-  <button id="resetBtn" class="btn btn-danger">Reset</button>
-</div>
-
+        <input id="nameInput" placeholder="Brukernavn..." maxlength="16" />
+        <select id="avatarSelect" class="avatar-select"></select> 
+        <button id="addBtn" class="btn btn-primary">Legg til</button>
+        <button id="finishBtn" class="btn btn-glow">FERDIG</button>
+        <button id="resetBtn" class="btn btn-danger">Reset</button>
+      </div>
 
       <div class="hint" id="castHint">Klar for oppkobling</div>
     </section>
