--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="topbar glass">
       <div class="topbar-left">
         <h1>LAN Scoreboard</h1>
-        <p>Admin-panel</p>
+        <p>Admin Kontrollpanel</p>
       </div>
       <div class="topbar-right">
         <google-cast-launcher></google-cast-launcher>
@@ -20,13 +20,21 @@
     </header>
 
     <section class="card glass">
-      <h2>Spillinnstillinger</h2>
-      <div class="controls">
-        <div class="admin-group">
-          <label>Vinnergrense (poeng):</label>
-          <input type="number" id="winLimitInput" value="50" style="width: 70px;" />
+      <h2>Game Admin & Nivåer</h2>
+      <div class="admin-panel">
+        <div class="controls" style="flex-direction: column; align-items: flex-start;">
+          <div class="input-group">
+            <label>Vinnergrense (Seier): </label>
+            <input type="number" id="winLimitInput" value="50" style="width: 80px;">
+          </div>
+          
+          <div class="rank-config-list" style="width: 100%; margin-top: 15px;">
+            <p><small>Aktiver nivåer og sett poengkrav:</small></p>
+            <div id="rankManager">
+              </div>
+          </div>
+          <button id="updateSettingsBtn" class="btn btn-glow" style="width: 100%; margin-top: 10px;">Oppdater Regler & TV</button>
         </div>
-        <button id="updateSettingsBtn" class="btn mini">Lagre regler</button>
       </div>
     </section>
 
@@ -42,6 +50,7 @@
           <option value="👾">👾 Monster</option>
           <option value="🐱">🐱 Katt</option>
           <option value="💎">💎 Diamant</option>
+          <option value="🍕">🍕 Pizza</option>
         </select>
         <input id="nameInput" placeholder="Brukernavn..." maxlength="16" />
         <button id="addBtn" class="btn btn-primary">Legg til</button>
